fixed search escaping, conflict background image, conflict double scroll bar in chrome, added ingredient button for submit recipe

--- a/nomnom/public/stylesheets/application.css
+++ b/nomnom/public/stylesheets/application.css
@@ -21,7 +21,6 @@ body {
 	background-position:center top;
 	background-attachment:fixed;
     padding: 15px;
-    color: #333;
 }
 
 #container {
